<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="remove">삭제</string>

    <string name="first_page">첫번째 페이지 입니다.</string>
    <string name="last_page">마지막 페이지 입니다.</string>
    <string name="confirm">Confirm</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="confirm_remove_task">Delete Task?</string>
    <string name="confirm_remove_all_completed_task">Delete All Completed Task?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete_all">Delete All</string>
    <string name="completed">completed</string>
    <string name="outstanding">outstanding</string>
    <string name="app_name">todo+</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="day_time">Day &amp; Time</string>
    <string name="due_date">Due Date</string>
    <string name="task">Task</string>
    <string name="completed_task">Completed Task</string>
    <string name="lock_screen_on">LockScreen On</string>
    <string name="lock_screen_off">LockScreen Off</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="add_new_task">Add a new task</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_modify_task">ModifyTaskActivity</string>
    <string name="hello_world">Hello world!</string>



    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>

    <string name="cantOpen">Can\'t open this application</string>

    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>

    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>

    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>

    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>

    <string name="loading">Loading</string>

    <string name="newTag">New!</string>
    <string name="discard">Discard</string>

</resources>
